fix: correcting some z-index issues on Login

--- a/front/src/styles/components/login/_login.scss
+++ b/front/src/styles/components/login/_login.scss
@@ -16,6 +16,7 @@
     background: $bg-login;
     background-size: 100% 100%;
     border-radius: 5px;
+    z-index: 0;
 
     &::before {
       position: absolute;
@@ -23,7 +24,7 @@
       inset: 0px;
       pointer-events: none;
       border: solid 2px $border-login-container-before;
-      z-index: 1;
+      z-index: 0;
     }
 
     &::after {
@@ -31,7 +32,7 @@
       content: url("/assets/background_stripes.jpg");
       right: 2px;
       top: -2px;
-      z-index: 0;
+      z-index: -1;
     }
 
     & :not(.header-wlm__title, .header-wlm__title b) {
